# vst-plugin-builder

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  WORKFLOW.md
.claude/: settings.json
.claude/skills/debug/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/dream/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/installer/: SKILL.md
.claude/skills/plan/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-installer.yml  codeql.yml  dependabot-automerge.yml  maintenance.yml  plugin-ci.yml
.mcp-servers/juce-docs/juce-docs-mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
.mcp-servers/juce-docs/juce-docs-mcp-server/src/: index.ts  juce-docs.ts  test-client.ts
plugins/Aetherweave/: CMakeLists.txt  status.json
plugins/Aetherweave/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  ui-mockup-v1.md
plugins/Aetherweave/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Aetherweave/tests/: CMakeLists.txt  sample-test.cpp
plugins/ReverbATron/: CMakeLists.txt  README.md
plugins/ReverbATron/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  ui-mockup.md
plugins/ReverbATron/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/RoomCorrection/: CMakeLists.txt
plugins/RoomCorrection/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/RoomCorrection/targetfiles/: curve_data.cpp  extracted_curves.json
plugins/underwater/: CMakeLists.txt
plugins/underwater/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
prompts/: debug.md  deploy.md  dream.md  implement.md  installer.md  plan.md
rules/: brand.md  juce-patterns.md  known-issues.yaml  plugin-conventions.md  status-schema.md
scripts/: build-mac-installer.sh
templates/: CMakeLists.txt.template  distribution.xml.template  installer.iss.template
templates/tests/: CMakeLists.txt.template  sample-test.cpp.template
